# webhooks

./: .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  config.example.yml  pyproject.toml
.github/workflows/: build-image.yml
src/oes/webhooks/: app.py  log.py  serialization.py  settings.py
src/oes/webhooks/email/: html.py  mock.py  sender.py  template.py  types.py  views.py
src/oes/webhooks/receipt/: __init__.py  views.py
src/oes/webhooks/sheets/: __init__.py  client.py  views.py
templates/email/: base.html  base.txt  code.html  code.txt  receipt.html  receipt.txt
tests/email/: test_html.py  test_mock.py  test_template.py  test_types.py
tests/email/templates/: attachment.txt  inline.txt  subject.txt  subject_default.txt  template.txt
